--- a/html/inicio.html
+++ b/html/inicio.html
@@ -39,7 +39,7 @@
 
                     <!-- Botones -->
                     <div class="d-flex align-items-center">
-                        <a class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</a>
+                        <button class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</button>
                         <button class="btn btn-consulta">Consulta Gratuita</button>
                     </div>
                 </div>
