avances pagina inicio

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -9,7 +9,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Kreon:wght@300;400;500;600;700&family=League+Spartan:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.cdnfonts.com/css/league-gothic" rel="stylesheet">
         <title>Ecovolt</title>
     </head>
     <body>
@@ -18,7 +17,7 @@
                 <div class="container-fluid">
                     <!-- Logo -->
                     <a class="navbar-brand" href="#">
-                        <img src="../images/logo.png" alt="Ecovolt Logo" width="150" height="auto">
+                        <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
                     </a>
 
                     <!-- Botón de colapso móvil -->
@@ -42,6 +41,11 @@
                         <button class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</button>
                         <button class="btn btn-consulta">Consulta Gratuita</button>
                     </div>
+                </div>
+                <div class="presentacion">
+                    <h1>¡Bienvenidos a Ecovolt!</h1>
+                    <h2>Instalación de placas solares fotovoltaicas</h2>
+                    <h3>Con Ecovolt, cada rayo de sol cuenta para un futuro mejor</h3>
                 </div>
             </nav>
         </header>
