avances en inicio

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -38,16 +38,31 @@
 
                     <!-- Botones -->
                     <div class="d-flex align-items-center">
-                        <button class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</button>
-                        <button class="btn btn-consulta">Consulta Gratuita</button>
+                        <a class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</a>
+                        <a class="btn btn-consulta">Consulta Gratuita</a>
                     </div>
-                </div>
-                <div class="presentacion">
-                    <h1>¡Bienvenidos a Ecovolt!</h1>
-                    <h2>Instalación de placas solares fotovoltaicas</h2>
-                    <h3>Con Ecovolt, cada rayo de sol cuenta para un futuro mejor</h3>
                 </div>
             </nav>
         </header>
+        <main style="background-color: #F6F8F4;">
+            <div class="presentacion">
+                <h1>¡Bienvenidos a Ecovolt!</h1>
+                <h2>Instalación de placas solares fotovoltaicas</h2>
+                <h3>Con Ecovolt, cada rayo de sol cuenta para un futuro mejor.</h3>
+            </div>
+            <div class="parte1">
+                <div class="introduccion-quienes-somos">
+                    <h3>¿QUIÉNES SOMOS?</h3>
+                    <h1>Ecovolt energía solar para un futuro sostenible</h1>
+                    <p>
+                        Ecovolt nace con la misión de acercar la energía solar a hogares, comunidades y empresas, ayudando a reducir el gasto eléctrico y la dependencia de energías contaminantes. Lo hacemos a través de instalaciones fotovoltaicas de última generación que permiten aprovechar al máximo una fuente limpia, inagotable y gratuita: el sol. 
+                        Nuestro compromiso es ofrecer soluciones personalizadas que combinan ahorro, innovación y sostenibilidad, acompañando a cada cliente en todo el proceso hacia la transición energética.
+                    </p>
+                </div>
+                <div class="imagen-parte1">
+                    <img src="../images/inicio/imagen-parte1.png">
+                </div>
+            </div>
+        </main>
     </body>
 </html>
