parte 2 pagina inicio

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -53,14 +53,35 @@
             <div class="parte1">
                 <div class="introduccion-quienes-somos">
                     <h3>¿QUIÉNES SOMOS?</h3>
-                    <h1>Ecovolt energía solar para un futuro sostenible</h1>
-                    <p>
-                        Ecovolt nace con la misión de acercar la energía solar a hogares, comunidades y empresas, ayudando a reducir el gasto eléctrico y la dependencia de energías contaminantes. Lo hacemos a través de instalaciones fotovoltaicas de última generación que permiten aprovechar al máximo una fuente limpia, inagotable y gratuita: el sol. 
-                        Nuestro compromiso es ofrecer soluciones personalizadas que combinan ahorro, innovación y sostenibilidad, acompañando a cada cliente en todo el proceso hacia la transición energética.
-                    </p>
+                    <h1><span>Ecovolt</span> energía solar para un futuro sostenible</h1>
+                    <p>Ecovolt nace con la misión de acercar la energía solar a hogares, comunidades y empresas, ayudando a reducir el gasto eléctrico y la dependencia de energías contaminantes. Lo hacemos a través de instalaciones fotovoltaicas de última generación que permiten aprovechar al máximo una fuente limpia, inagotable y gratuita: el sol. </p>
+                    <p>Nuestro compromiso es ofrecer soluciones personalizadas que combinan ahorro, innovación y sostenibilidad, acompañando a cada cliente en todo el proceso hacia la transición energética.</p>
+                    <a class="btn btn-sabermas">Saber más</a>
                 </div>
-                <div class="imagen-parte1">
-                    <img src="../images/inicio/imagen-parte1.png">
+                <img class="imagen-parte1" src="../images/inicio/imagen-parte1.jpg">
+            </div>
+            <div class="parte2">
+                <h1>NUESTROS SERVICIOS</h1>
+                <p>Ofrecemos soluciones de energía solar adaptadas a cada necesidad, desde hogares hasta grandes empresas</p>
+                <div class="servicios">
+                    <div class="particulares">
+                        <img src="../images/inicio/particulares.png">
+                        <h1>Particulares</h1>
+                        <p>Energía solar en tu hogar: ahorra, controla y cuida del planeta.</p>
+                        <a class="btn btn-masinformacion">Más información</a>
+                    </div>
+                    <div class="comunidad-vecinos">
+                        <img src="../images/inicio/comunidad-vecinos.png">
+                        <h1>Comunidad de vecinos</h1>
+                        <p>Comparte energía limpia en tu comunidad y reduce el gasto eléctrico común.</p>
+                        <a class="btn btn-masinformacion">Más información</a>
+                    </div>
+                    <div class="empresas">
+                        <img src="../images/inicio/empresa.png">
+                        <h1>Empresas</h1>
+                        <p>Reduce costes energéticos y mejora la sostenibilidad de tu empresa con energía solar</p>
+                        <a class="btn btn-masinformacion">Más información</a>
+                    </div>
                 </div>
             </div>
         </main>
