--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -46,15 +46,9 @@
             </nav>
         </header>
         <main>
-            <div class="d-flex align-items-center justify-content-center flex-column" style="background-image: url(../images/presupuesto/imagen30.png); width: 100%; height: 100%; padding: 12%; background-size: cover;">
-                <h1 style="color: white;">
-                    SOLICITA PRESUPUESTO
-                </h1>
-                <h3 style="color: white; text-align: center;">
-                    O si lo prefieres, llamanos a nuestro numero de telefono de contacto y te asesoraremos sin compromiso
-                </h3>
+            <div class="d-flex align-items-center justify-content-center flex-column mt-5">
                 <h1 style="color: rgb(138, 216, 134);">
-                    611 234 567
+                    CONTACTAR
                 </h1>
             </div>
             <div class="d-flex align-items-top justify-content-center mt-5">
@@ -81,20 +75,12 @@
                 <div class="card text-center" style="width: 35%;">
                     <div class="card-body">
                         <h3>
-                            Rellena el siguiente formulario
+                           Formulario de contacto
                         </h3>
                         <form class="align-items-center">
                             <div class="mb-3" style="width: 100%;">
-                                <label for="exampleInputEmail1" class="form-label">Indica en qué tipo de productos estás interesado</label>
+                                <label for="exampleInputEmail1" class="form-label">Nombre</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                            </div>
-                            <div class="mb-3" style="width: 100%;">
-                                <label for="exampleInputPassword1" class="form-label">Municipio</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                            </div>
-                            <div class="mb-3" style="width: 100%;">
-                                <label for="exampleInputPassword1" class="form-label">Nombre completo</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
                             </div>
                             <div class="d-flex" style="gap: 2.5%;">
                                 <div class="mb-3" style="width: 50%;">
@@ -107,10 +93,14 @@
                                 </div>
                             </div>
                             <div class="mb-3" style="width: 100%;">
+                                <label for="exampleInputPassword1" class="form-label">Asunto</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3" style="width: 100%;">
                                 <label for="exampleInputPassword1" class="form-label">Mensaje</label>
                                 <input type="password" class="form-control" id="exampleInputPassword1">
                             </div>
-                            <button type="submit" class="btn btn-primary" style="color: black;">SOLICITAR ESTUDIO GRATUITO</button>
+                            <button type="submit" class="btn btn-primary" style="color: black;">ENVIAR</button>
                         </form>
                     </div>
                 </div>
