inicio y footer terminadas

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Kreon:wght@300;400;500;600;700&family=League+Spartan:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0&icon_names=location_on" />        
         <title>Ecovolt</title>
     </head>
     <body>
@@ -67,13 +68,13 @@
                     <div class="particulares">
                         <img src="../images/inicio/particulares.png">
                         <h1>Particulares</h1>
-                        <p>Energía solar en tu hogar: ahorra, controla y cuida del planeta.</p>
+                        <p>Energía solar en tu hogar: ahorra, controla y cuida del planeta</p>
                         <a class="btn btn-masinformacion">Más información</a>
                     </div>
                     <div class="comunidad-vecinos">
                         <img src="../images/inicio/comunidad-vecinos.png">
                         <h1>Comunidad de vecinos</h1>
-                        <p>Comparte energía limpia en tu comunidad y reduce el gasto eléctrico común.</p>
+                        <p>Comparte energía limpia en tu comunidad y reduce el gasto eléctrico común</p>
                         <a class="btn btn-masinformacion">Más información</a>
                     </div>
                     <div class="empresas">
@@ -84,6 +85,117 @@
                     </div>
                 </div>
             </div>
+            <div class="parte3">
+                <h1>¿Por qué instalar placas fotovoltaicas?</h1>
+                <div class="razones">
+                    <div class="razon1">
+                        <div>
+                            <img src="../images/inicio/icons8-bombilla-globo-96.png">
+                        </div>
+                        <h2>AHORRO EN LA FACTURA DE LUZ</h2>
+                        <p>Generar tu propia energía solar reduce significativamente el gasto mensual en electricidad</p>
+                    </div>
+                    <div class="razon2">
+                        <div>
+                            <img src="../images/inicio/icons8-sostenibilidad-100.png">
+                        </div>
+                        <h2>ENERGÍA LIMPIA Y SOSTENIBLE</h2>
+                        <p>Contribuyes a disminuir las emisiones de CO₂ y apuestas por un futuro respetuoso con el medio ambiente</p>
+                    </div>
+                    <div class="razon3">
+                        <div>
+                            <img src="../images/inicio/icons8-batería-96.png">
+                        </div>
+                        <h2>INDEPENDENCIA ENERGÉTICA</h2>
+                        <p>Menor dependencia de las compañías eléctricas y protección frente a la subida de precios de la luz</p>
+                    </div>
+                    <div class="razon4">
+                        <div>
+                            <img src="../images/inicio/icon-revalorizacion.png">
+                        </div>
+                        <h2>REVALORIZACIÓN DE LA PROPIEDAD</h2>
+                        <p>Las viviendas y empresas con instalaciones solares aumentan su valor en el mercado inmobiliario</p>
+                    </div>
+                </div>
+            </div>
+            <div class="parte4">
+                <h1>Clientes que ya confían en nosotros</h1>
+                <p>Empresas líderes han elegido Ecovolt para su transición energética hacia la sostenibilidad</p>
+                <div class="clientes">
+                    <div class="cliente1">
+                        <img src="../images/inicio/wh_png_low.png">
+                        <p>Jérez de la Frontera</p>
+                        <p>Instalación de 539 kWp fotovoltaicos en la bodega</p>
+                    </div>
+                    <div class="cliente2">
+                        <img src="../images/inicio/gb_logo_master_a2_rgb.png">
+                        <p>Jérez de la Frontera</p>
+                        <p>Han ampliado sus paneles solares en la bodega central para lograr una autonomía fotovoltaica durante más de diez horas diarias</p>
+                    </div>
+                    <div class="cliente3">
+                        <img src="../images/inicio/dinotec.png">
+                        <p>Sevilla</p>
+                        <p>Instalación de 41 paneles solares en techo de fábrica y oficinas, sistema de 15 kW, que generará unos 27.710 kWh al año</p>
+                    </div>
+                    <div class="cliente4">
+                        <img src="../images/inicio/barbadillo.png">
+                        <p>Jérez de la Frontera</p>
+                        <p>Proyecto de 238 paneles (545 kW) en cubierta para autoconsumo eléctrico, generando 198.300 kWh/año</p>
+                    </div>
+                    <div class="cliente5">
+                        <img src="../images/inicio/repsol.png">
+                        <p>Madrid</p>
+                        <p>En 2023 Ecovolt instaló un sistema de autoconsumo en parte del Campus Repsol en Madrid, logrando reducir un 20% de su consumo eléctrico convencional</p>
+                    </div>
+                    <div class="cliente6">
+                        <img src="../images/inicio/Imagina_Energía_Logo.png">
+                        <p>Madrid</p>
+                        <p>Es una compañía 100 % solar que ofrece soluciones de autoconsumo tanto para hogares como para empresas</p>
+                    </div>
+                </div>
+            </div>
+            <div class="parte5">
+                <div class="cambio">
+                    <h1>¿Listo para el <span>cambio</span>?</h1>
+                    <p>Solicita tu estudio gratuito y personalizado.</p>
+                    <p>Nuestros expertos analizarán tu caso y te proporcionarán la mejor solución de energía solar.</p>
+                    <a class="btn btn-consulta">Consulta Gratuita</a>
+                </div>
+            </div>
         </main>
+        <footer>
+            <div class="footer1">
+                <div class="logo-footer">
+                    <img src="../images/inicio/logo.png">
+                </div>
+                <p>Especialistas en energía solar fotovoltaica. Contribuyendo a un futuro más sostenible desde 2021.</p>
+            </div>
+            <div class="footer2">
+                <h1>Contacto</h1>
+                <div>
+                    <img src="../images/inicio/location_on_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>Madrid: Calle Núñez de Balboa, 120</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/location_on_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>Sevilla: Parque Cartuja, Isaac Newton 4</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/call_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>912 345 678 / 611 234 567</p>
+                </div>
+                <div>
+                    <img src="../images/inicio/mail_40dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png">
+                    <p>info@ecovolt.es</p>
+                </div>
+            </div>
+            <div class="footer3">
+                <h1>Servicios</h1>
+                <a href="">Particulares</a>
+                <a href="">Comunidad de vecinos</a>
+                <a href="">Empresas</a>
+                <a href="">Consulta gratuita</a>
+            </div>
+        </footer>
     </body>
 </html>
