--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -51,7 +51,7 @@
                     CONTACTAR
                 </h1>
             </div>
-            <div class="d-flex align-items-top justify-content-center mt-5">
+            <div class="d-flex align-items-top justify-content-center mt-5" style="flex-wrap: wrap;">
                 <div >
                     <div class="d-flex flex-column me-5">
                         <div class="d-flex align-items-center">
