--- a/html/inicio.html
+++ b/html/inicio.html
@@ -13,38 +13,36 @@
         <title>Ecovolt</title>
     </head>
     <body>
-        <header>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <!-- Logo -->
-                    <a class="navbar-brand" href="#">
-                        <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
-                    </a>
+        <nav class="navbar navbar-expand-lg sticky-top">
+            <div class="container-fluid">
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img src="../images/inicio/logo.png" alt="Ecovolt Logo" width="150" height="auto">
+                </a>
 
-                    <!-- Botón de colapso móvil -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <!-- Botón de colapso móvil -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <!-- Menú -->
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="#">INICIO</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">SERVICIOS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">NOSOTROS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">CONTACTO</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- Botones -->
-                    <div class="d-flex align-items-center">
-                        <a class="btn btn-acceder d-flex align-items-center"><i class="bi bi-person-fill me-1"></i>ACCEDER</a>
-                        <a class="btn btn-consulta">Consulta Gratuita</a>
-                    </div>
+                <!-- Menú -->
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../html/inicio.html">INICIO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/sobreNosotros.html">NOSOTROS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../html/contactanos.html">CONTACTO</a></li>
+                    </ul>
                 </div>
-            </nav>
-        </header>
+
+                <!-- Botones -->
+                <div class="d-flex align-items-center">
+                    <a class="btn btn-acceder d-flex align-items-center" href="../html/acceder.html"><i class="bi bi-person-fill me-1"></i>ACCEDER</a>
+                    <a class="btn btn-consulta" href="../html/presupuesto.html">Consulta Gratuita</a>
+                </div>
+            </div>
+        </nav>
         <main style="background-color: #F6F8F4;">
             <div class="presentacion">
                 <h1>¡Bienvenidos a Ecovolt!</h1>
@@ -69,7 +67,7 @@
                         <img src="../images/inicio/particulares.png">
                         <h1>Particulares</h1>
                         <p>Energía solar en tu hogar: ahorra, controla y cuida del planeta</p>
-                        <a class="btn btn-masinformacion">Más información</a>
+                        <a class="btn btn-masinformacion" href="../html/particulares.html">Más información</a>
                     </div>
                     <div class="comunidad-vecinos">
                         <img src="../images/inicio/comunidad-vecinos.png">
@@ -198,4 +196,14 @@
             </div>
         </footer>
     </body>
+    <script>
+    window.addEventListener("scroll", function () {
+        const navbar = document.querySelector("nav.navbar");
+        if (window.scrollY > 50) {
+        navbar.classList.add("navbar-scrolled");
+        } else {
+        navbar.classList.remove("navbar-scrolled");
+        }
+    });
+    </script>
 </html>
