--- a/html/panel-cliente.html
+++ b/html/panel-cliente.html
@@ -9,7 +9,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Kreon:wght@300;400;500;600;700&family=League+Spartan:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0&icon_names=location_on" />        
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0&icon_names=location_on" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>    
         <title>Ecovolt</title>
     </head>
     <body>
@@ -66,11 +68,52 @@
                 <div class="tarjeta4">
                     <p class="tipo1">CO₂ Evitado</p>
                     <p class="tipo2">285 kg</p>
-                    <p class="tipo3">Este mes</p>
+                    <p class="tipo3">+10.8% vs mes anterior</p>
                 </div>
             </div>
             <div class="graficos">
-                <div class="grafico1"></div>
+                <div>
+                    <h3 style="font-family: 'Electrolize', sans-serif; text-align:center; color:#003936;">Producción de Energía Solar</h3>
+                    <p style="text-align:center; color:#6C756A;">Energía generada por tus placas solares hoy</p>
+                    <div class="grafico1">
+                        <canvas id="solarChart" width="400" height="200"></canvas>
+                    </div>
+                </div>
+                <div>
+                    <h3 style="font-family: 'Electrolize', sans-serif; text-align:center; color:#003936;">Energía Consumida vs. Ahorrada</h3>
+                    <p style="text-align:center; color:#6C756A;">Evolución mensual del consumo y ahorro energético expresado en kW</p>
+                        <div class="grafico2">
+                        <canvas id="energiaChart2"></canvas>
+                        </div>
+                </div>
+            </div>
+            <button type="button" class="btn-chat" data-bs-toggle="modal" data-bs-target="#chatSoporte">
+                <i class="bi bi-chat-dots-fill"></i> 
+            </button>
+
+            <div class="modal fade" id="chatSoporte" tabindex="-1" aria-labelledby="chatSoporteLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-end modal-dialog-scrollable">
+                <div class="modal-content chat-modal">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="chatSoporteLabel">Soporte en línea</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body chat-body">
+                    <div class="mensaje soporte">
+                    <p>¡Hola! 👋 ¿En qué podemos ayudarte hoy?</p>
+                    <span class="hora">10:21</span>
+                    </div>
+                    <div class="mensaje usuario">
+                    <p>Hola, tenía una duda sobre mi consumo energético.</p>
+                    <span class="hora">10:22</span>
+                    </div>
+                </div>
+                <div class="modal-footer chat-input">
+                    <input type="text" class="form-control" placeholder="Escribe un mensaje...">
+                    <button class="btn btn-primary">Enviar</button>
+                </div>
+                </div>
+            </div>
             </div>
         </main>
         <footer>
@@ -116,6 +159,126 @@
         } else {
         navbar.classList.remove("navbar-scrolled");
         }
+    });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+    const ctx = document.getElementById('solarChart').getContext('2d');
+
+    const horas = [
+    "02:00","04:00","06:00","08:00","10:00","12:00","14:00",
+    "16:00","18:00","20:00","22:00"
+    ];
+
+    const produccion = [0, 0, 1, 6, 14, 22, 26, 20, 10, 3, 0];
+
+    new Chart(ctx, {
+    type: 'line',
+    data: {
+        labels: horas,
+        datasets: [{
+        label: 'Producción (kWh)',
+        data: produccion,
+        fill: true,
+        backgroundColor: 'rgba(138, 216, 134, 0.3)',
+        borderColor: '#6dad69',
+        borderWidth: 2,
+        tension: 0.4,
+        pointRadius: 0
+        }]
+    },
+    options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        scales: {
+        x: {
+            grid: { display: false },
+            title: { display: true, text: 'Hora', color: '#6C756A', font: { size: 14 } }
+        },
+        y: {
+            beginAtZero: true,
+            title: { display: true, text: 'kWh', color: '#6C756A', font: { size: 14 } },
+            ticks: { stepSize: 7 }
+        }
+        },
+        plugins: {
+        legend: { display: false },
+        tooltip: {
+            backgroundColor: '#003936',
+            titleFont: { size: 14 },
+            bodyFont: { size: 13 }
+        }
+        },
+        elements: {
+        line: { borderJoinStyle: 'round' }
+        }
+    }
+    });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+    const ctx2 = document.getElementById('energiaChart2').getContext('2d');
+
+    new Chart(ctx2, {
+    type: 'bar',
+    data: {
+        labels: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun'],
+        datasets: [
+        {
+            label: 'Energía Ahorrada',
+            data: [380, 400, 500, 580, 630, 670],
+            backgroundColor: '#28a745',
+            borderRadius: 5,
+        },
+        {
+            label: 'Energía Consumida',
+            data: [420, 410, 460, 400, 370, 350],
+            backgroundColor: '#4285F4',
+            borderRadius: 5,
+        }
+        ]
+    },
+    options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+        legend: {
+            position: 'bottom',
+            labels: {
+            usePointStyle: true,
+            boxWidth: 15,
+            font: {
+                size: 13
+            }
+            }
+        },
+        subtitle: {
+            display: true,
+            text: 'kWh',
+            align: 'end',
+            font: {
+            size: 12
+            },
+            padding: { bottom: 10 }
+        }
+        },
+        scales: {
+        x: {
+            grid: {
+            display: false
+            }
+        },
+        y: {
+            beginAtZero: true,
+            grid: {
+            borderDash: [5, 5]
+            },
+            ticks: {
+            stepSize: 200
+            }
+        }
+        }
+    }
     });
     </script>
 </html>
