--- a/html/servicios.html
+++ b/html/servicios.html
@@ -63,7 +63,7 @@
                    <p>
                     Energía solar en tu hogar: ahorra, controla y cuida del planeta.
                    </p>
-                    <button type="submit" class="btn btn-primary" style="color: black;">ENVIAR</button>
+                    <button type="submit" class="btn btn-primary" style="color: black;">Más información</button>
                 </div>
             </div>
             <div class="card text-center" style="width: 50%; height: 300px;">
@@ -75,7 +75,7 @@
                    <p>
                     Comparte energía limpia en tu comunidad y reduce el gasto eléctrico común.
                    </p>
-                    <button type="submit" class="btn btn-primary" style="color: black;">ENVIAR</button>
+                    <button type="submit" class="btn btn-primary" style="color: black;">Más información</button>
                 </div>
             </div>
             <div class="card text-center" style="width: 50%;  height: 300px;">
@@ -87,7 +87,7 @@
                    <p>
                     Reduce costes energéticos y mejora la sostenibilidad de tu empresa con energía solar
                    </p>
-                    <button type="submit" class="btn btn-primary" style="color: black;">ENVIAR</button>
+                    <button type="submit" class="btn btn-primary" style="color: black;">Más información</button>
                 </div>
             </div>
         </div>
