--- a/html/presupuesto.html
+++ b/html/presupuesto.html
@@ -47,13 +47,13 @@
         </header>
         <main class="mb-5">
             <div class="d-flex align-items-center justify-content-center flex-column" style="background-image: url(../images/presupuesto/imagen30.png); width: 100%; height: 100%; padding: 12%; background-size: cover;">
-                <h1 style="color: white;">
+                <h1 style="color: white; font-size: 126px; text-align: center;">
                     SOLICITA PRESUPUESTO
                 </h1>
-                <h3 style="color: white; text-align: center;">
+                <h3 style="color: white; text-align: center; font-size: 40px;">
                     O si lo prefieres, llamanos a nuestro numero de telefono de contacto y te asesoraremos sin compromiso
                 </h3>
-                <h1 style="color: rgb(138, 216, 134);">
+                <h1 style="color: rgb(138, 216, 134); font-size: 126px">
                     611 234 567
                 </h1>
             </div>
