--- a/html/sobreNosotros.html
+++ b/html/sobreNosotros.html
@@ -48,8 +48,8 @@
         <main >
             <!--Imagen con texto-->
             <div class="d-flex flex-column align-items-center justify-content-center" style="color: white; background-image: url(../images/sobreNosotros/image\ 30.png); width: 100%; height: 100%; padding: 12%; background-size: cover;">
-                <h1>Sobre nosotros</h1>
-                <h2>
+                <h1 style="font-size: 126px;">Sobre nosotros</h1>
+                <h2 style="font-size: 45px; text-align: center;">
                     La energia del futuro es limpia, sostenible y accesible para todos
                 </h2>
             </div>
